client/styles/main.scss
$font-primary: 'Menlo', Menlo, monospace;
$background: #000;
$color: lime;

@import 'components/table';

::selection {
  background: $color;
  color: black;
}
::-moz-selection {
  background: $color;
  color: black;
}

body {
  background: $background;
  color: $color;
  font-family: $font-primary;
  font-size: 13px;
  letter-spacing: 0.02em;
  animation: distort .2s linear infinite;
  overflow-x: hidden;
  margin: 0;
}

pre,
code {
  font-family: $font-primary;
  font-size: 13px;
}


.terminal__cursor {
  display: inline-block;
  width: 9px;
  height: 1.2em;
  background: lime;
  vertical-align: bottom;
}

.terminal__input {
  opacity: 0;
  width: 0px;
  font-size: 12px;
}

input {
  background: transparent;
  color: white;
  border: none;

  &:focus {
    outline: 0;
  }
}

.prompt__input-text {
  margin: 0 -7px 0 8px;
}

.prompt__entry {
  white-space: pre-line;
  color: white;

  &::selection {
    background: blue; /* WebKit/Blink Browsers */
    color: white;
  }
  &::-moz-selection {
    background: blue; /* Gecko Browsers */
    color: white;
  }
}

.indent {
  padding-left: 18px;
}

.type__list__title {
  color: lightblue;
  margin: 0;
}

.type__list__item {
  display: inline-block;
  padding: 4px;
  background-color: #222;
  color: lime;
  margin-right: 6px;
}

.yellow {
  color: $background;
  background: green;
}

.green {
  color: red;
}

#container {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
}

#start-here {
  z-index: -1;
  padding: 0 15px 15px;
}

#info {
  color: #000;
  position: absolute;
  top: 0px;
  width: 100%;
  padding: 5px;
}

.warning {
  position: fixed;
  bottom: 40px;
  box-sizing: border-box;
  width: 100%;
  margin: 0 auto;
  left: 0;
  text-align: center;
  padding: 0 30px;
  font-size: 20px;
  color: #00ff00;
  z-index: 3;
}

.warning__inner {
  max-width: 500px;
  margin: 0 auto;
}

.blink {
  opacity: 0;
}

p {
  display: inline;
  margin: 0;
}

a {
  color: mediumblue;
}


.error {
  background-color: mediumblue;
}

.super-animated-text {
  position: absolute;
  transform: translateY(-50%);
  width: 100%;
  text-align: center;
  top: 50%;
  font-size: 10px;
}

// Animations

.a-blink {
  animation: blink-animation 1s steps(2, start) infinite;
  -webkit-animation: blink-animation 1s steps(2, start) infinite;
}
@keyframes blink-animation {
  to {
    visibility: hidden;
  }
}
@-webkit-keyframes blink-animation {
  to {
    visibility: hidden;
  }
}

.distort {
  animation: distort 5s linear infinite;
}

.glitch {
  position: relative;
  margin: 0 auto;
  background: $background;
}

.glitch::before,
.glitch::after {
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  animation-direction: alternate-reverse;
  overflow: hidden;
  position: absolute;
  top: 0;
  clip: rect(0, 900px, 0, 0);
  content: attr(data-text);
}

.glitch::after {
  animation-name: glitch-animation;
  animation-duration: 4s;
  left: 4px;
  text-shadow: -1px 0 red;
  background: $background;
}

.glitch::before {
  animation-name: glitch-animation-2;
  animation-duration: 6s;
  left: -4px;
  text-shadow: 1px 0 blue;
  background: $background;
}

@mixin rect($top, $bottom) {
  clip: rect($top, 9999px, $bottom, 0);
}

/* Expanded Animations */
@keyframes glitch-animation {
  0% { @include rect(42px, 44px); }
  5% { @include rect(12px, 59px); }
  10% { @include rect(48px, 29px); }
  15.0% { @include rect(42px, 73px); }
  20% { @include rect(63px, 27px); }
  25% { @include rect(34px, 55px); }
  30.0% { @include rect(86px, 73px); }
  35% { @include rect(20px, 20px); }
  40% { @include rect(26px, 60px); }
  45% { @include rect(25px, 66px); }
  50% { @include rect(57px, 98px); }
  55.0% { @include rect(5px, 46px); }
  60.0% { @include rect(82px, 31px); }
  65% { @include rect(54px, 27px); }
  70% { @include rect(28px, 99px); }
  75% { @include rect(45px, 69px); }
  80% { @include rect(23px, 85px); }
  85.0% { @include rect(54px, 84px); }
  90% { @include rect(45px, 47px); }
  95% { @include rect(37px, 20px); }
  100% { @include rect(4px, 91px); }
}

@keyframes glitch-animation-2 {
  0% { @include rect(65px, 100px); }
  5% { @include rect(52px, 74px); }
  10% { @include rect(79px, 85px); }
  15.0% { @include rect(75px, 5px); }
  20% { @include rect(67px, 61px); }
  25% { @include rect(14px, 79px); }
  30.0% { @include rect(1px, 66px); }
  35% { @include rect(86px, 30px); }
  40% { @include rect(23px, 98px); }
  45% { @include rect(85px, 72px); }
  50% { @include rect(71px, 75px); }
  55.0% { @include rect(2px, 48px); }
  60.0% { @include rect(30px, 16px); }
  65% { @include rect(59px, 50px); }
  70% { @include rect(41px, 62px); }
  75% { @include rect(2px, 82px); }
  80% { @include rect(47px, 73px); }
  85.0% { @include rect(3px, 27px); }
  90% { @include rect(26px, 55px); }
  95% { @include rect(42px, 97px); }
  100% { @include rect(38px, 49px); }
}

@keyframes distort {0%,3%,4.3%,5%,42%,44%,88%,90%,92%,to{opacity:1}90%{-webkit-transform:translate(-0px);transform:translate(-0px)}43%{opacity:0}}

